# memu

./: .gitignore  Cargo.toml  README.md
src/: debug_view.rs  display.rs  lib.rs  logger.rs  main.rs  memory.rs  utils.rs  window.rs
src/chip8/: README.md  debug_view.rs  instruction.rs  mod.rs  opcode.rs
src/debug_view/: debug_view.rs  dummy.rs  mod.rs
src/generic/: emulator.rs  memory.rs
