[package]
name = "memu"
version = "0.1.0"
authors = ["Mathijs Saey <mathijs@mathsaey.be>"]
edition = "2018"
description = "Toy emulators written in Rust"

[features]
default = ["debug-view", "chip8"]

debug-view = ["tui"]

chip8 = ["bitvec"]

[dependencies]
# Command line parsing
structopt = "0.3"
# Window
minifb = "0.16"
# Logging
flexi_logger = "0.15"
log = "0.4"
# Debug View
crossterm = "0.17" # TODO: Make this optional once game loop is fixed
tui = { version = "0.9", optional = true, default-features = false, features = ['crossterm'] }
# Chip8
bitvec = { version = "0.17", optional = true}
