[package]
name = "memu"
version = "0.1.0"
authors = ["Mathijs Saey <mathijs@mathsaey.be>"]
edition = "2018"
description = "Toy emulators written in Rust"

[features]
default = ["debug-view", "chip8"]

debug-view = ["tui", "crossterm"]

chip8 = ["bitvec"]

[dependencies]
rand = "0.7"
# Window, graphics, sounds,...
ggez = "0.5"
# Command line parsing
structopt = "0.3"
# Logging
flexi_logger = "0.15"
log = { version = "0.4", features = ["release_max_level_warn"] }
# Debug View
crossterm = { version = "0.17", optional = true }
tui = { version = "0.9", optional = true, default-features = false, features = ['crossterm'] }
# Chip8
bitvec = { version = "0.17", optional = true}
